# plusfraisautravail

./: .gitignore  .pre-commit-config.yaml  DEPLOY.md  Justfile  README.md  TODO.md  contenu.yaml  package-lock.json  package.json  questions.yaml  themes.yaml
.github/workflows/: ci.yml  deploy-alert-widget.yml  deploy-api.yml  deploy-autodiag.yml  deploy-climadiag.yml  deploy-cms.yml  deploy.yml  terraform-apply.yml  terraform-plan.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/src/pfat_api/: cache.py  config.py  departments.py  main.py  schemas.py
api/src/pfat_api/routes/: alerts.py  climadiag.py
api/src/pfat_api/sources/: climadiag.py  meteofrance.py  rte.py
api/tests/: conftest.py  test_alerts.py  test_climadiag.py  test_health.py  test_meteofrance.py  test_rte.py
apps/alert-widget/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
apps/alert-widget/scripts/: generate-france-geo.mjs
apps/alert-widget/src/: AlertWidget.css  AlertWidget.tsx  demo.ts  departments.ts  embed.tsx  main.tsx  mount-map.tsx
apps/alert-widget/test-embed/: auto-mount.html  index.html  with-dsfr.html
apps/autodiag/: .gitignore  contenu.yaml  index.html  package.json  playwright.config.ts  questions.yaml  vite.config.ts
apps/climadiag/: README.md  index.html  package.json  vite.config.ts
apps/cms/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
apps/cms/sites_conformes/: asgi.py  settings.py  urls.py  wsgi.py
apps/cms/tests/: test_healthz.py
autodiag/: index.html  package-lock.json  package.json  vite.config.ts
autodiag/src/: App.tsx  main.tsx  vite-env.d.ts
infra/: README.md
migration/: restore_dump.sh  s3_sync.sh
sources/: 2026_autoévaluation des capacités d'adaptation.xlsx  get_vigilance.py
(+70 files in other folders)
