[project]
name = "sites-conformes-cms"
version = "0.1.0"
description = "Sites-conformes Django CMS for plusfraisautravail.beta.gouv.fr."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "gunicorn>=23",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.3",
    "django-storages[s3]>=1.14",
    "whitenoise>=6.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sites_conformes"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sites_conformes.settings"
testpaths = ["tests"]
